--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.9",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "universal-cookie": "^7.2.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
